<resources>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="app_name">WikiEdu Dashboard</string>
    <string name="title_home">Explore</string>
    <string name="title_dashboard">My Dashboard</string>
    <string name="title_notifications">Profile</string>
    <string name="title_search">Search</string>
    <string name="demo_course">WikiProject Medicine Winter 2018 UCF COM</string>
    <string name="demo_course2">ARCHY 319 Archaeology of Australia</string>
    <string name="articles_created">Articles Created</string>
    <string name="articles_edited">Articles Edited</string>
    <string name="commons_upload">Commons Uploads</string>
    <string name="article_views">Article Views</string>
    <string name="words_added">Words Added</string>
    <string name="student_editors">Student Editors</string>
    <string name="demo_course_description">This is a demo description. This is a demo description. This is a demo description. This is a demo description. This is a demo description. This is a demo description. This is a demo description. This is a demo description. This is a demo description. This is a demo description. This is a demo description.</string>
    <string name="school">School:</string>
    <string name="end">End:</string>
    <string name="start">Start:</string>
    <string name="expected_students">Expected Students:</string>
    <string name="passcode">Passcode:</string>
    <string name="term">Term:</string>
    <string name="_45">45</string>
    <string name="course_title">Course Title</string>
    <string name="details">Details</string>
    <string name="description">Description</string>
    <string name="wiki_education_dashboard">Wiki Education\n Dashboard</string>
    <string name="wiki_edu_dashboard">Wiki Education\n Dashboard</string>
    <string name="log_in_with_wikipedia">Log in with Wikipedia</string>
    <string name="sign_up_with_wikipedia">Sign up with Wikipedia</string>
    <string name="tv_no_programs">Looks like you haven\'t joined a program yet. Click on Explore to find your program and join it.</string>
    <string name="media_detail_author">Author</string>
    <string name="media_detail_license">License</string>
    <string name="media_detail_uploaded_date">Date</string>
    <string name="media_detail_description">Description</string>
    <string name="media_detail_title">Title</string>
    <string name="media_detail">Media Detail</string>
    <string name="title_download">Download</string>
    <string name="title_view_in_browser">View in Browser</string>
    <string name="tv_no_categories">No Categories</string>
    <string name="label_categories">Categories</string>
    <string name="tv_no_file_uses">No File Uses</string>
    <string name="label_file_uses">File Uses</string>
    <string name="tv_no_uploads">No Uploads</string>
    <string name="tv_no_articles">No Articles</string>
    <string name="tv_no_users">No Users</string>
    <string name="btn_join">Join</string>
    <string name="btn_cancel">Cancel</string>
    <string name="tv_no_campaigns">No Active Campaigns</string>
    <string name="tv_no_courses">No Active Courses</string>
    <string name="tv_no_activity">No Activity</string>
    <string name="demo_course_name">Anti-rape movement</string>
    <string name="label_chars_added">Chars Added : </string>
    <string name="label_edited_by">Edited By :</string>
    <string name="label_edited_on">Edited on :</string>
    <string name="time_format_12_hours">dd-MMM-yy hh.mm aa</string>
    <string name="menu_search">Search</string>
    <string name="references_added">References Added</string>
    <string name="outreach_programs_and_events_dashboard">Outreach Programs and Events Dashboard</string>
    <string name="menu_settings">Settings</string>
    <string name="not_enrolled">You are not enrolled in any course</string>
    <string name="total_edits">Total Edits</string>
    <string name="media_detail_desc">Description of the media goes here. This can potentially be fairly long, and will need to wrap across multiple lines. We hope it looks nice though.</string>
    <string name="screen1_title">Wiki Education Dashboard</string>
    <string name="sub1_description">Monitor and Manage your Courses  on Wiki Education Dashboard</string>
    <string name="main_description1">The Wiki Education Dashboard is an application that supports Wikipedia  education assignments, edit-a-thons, and other editing projects.</string>
    <string name="screen2_title"><![CDATA[Outreach Programs & Events Dashboard]]></string>
    <string name="sub2_description">Manage and track Wikimedia programs and events</string>
    <string name="main_description2">Facilitates educational programs by adding features for teachers and students. Features include various interfaces to manage courses, institutions, students, mentors, etc.</string>
    <string name="next">Next</string>
    <string name="get_started">Get Started</string>
    <string name="skip">Skip</string>
    <string name="chars_added">2500</string>
    <string name="date_edited">2019-03-31 5:29 PM</string>
    <string name="participate">Participate in a Campaign</string>
    <string name="find_a_program">Find a Program</string>
    <string name="create_program">Create an Independent Program</string>
    <string name="general">General</string>
    <string name="send_feedback">Send Feedback</string>
    <string name="share_app">Share App</string>
    <string name="legal">Legal</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_and_conditions">Terms and Conditions</string>
    <string name="logout">Logout</string>
    <string name="version_0_01"> 0.01</string>

    <string name="license_link">License link</string>
    <string name="license">License</string>
    <string name="version">Version</string>
    <string name="wikieducationfoundation">Wiki Education Foundation</string>
    <string name="wiki_education_dashboard_singleLine">Wiki Education Dashboard</string>
    <string name="total_impact_made_by_students">Total impact made by %s\'s student</string>
    <string name="total_impact_made_as_student">Total impact made as %s as a student</string>
    <string name="Courses">Courses</string>
    <string name="courses">Courses</string>
    <string name="students">Students</string>
    <string name="campaign_title">Campaign Title</string>
    <string name="campaign_detail">Details</string>
    <string name="creation_date">Creation Date:</string>
    <string name="article_title">Fred Kruger</string>
    <string name="views">Views</string>
    <string name="views_count">500</string>
    <string name="username">Gconnect</string>
    <string name="institution">Institution</string>
    <string name="institution_name">WMNL</string>
    <string name="words_added_count">1.38m</string>
    <string name="recent_edits">Recent Edits</string>
    <string name="recent_edits_count">1704</string>
    <string name="references_added_count">2.93k</string>
    <string name="editors">Editors</string>
    <string name="editor_count">2</string>
    <string name="student_name">Gamalliel</string>
    <string name="edit_count">Edit Count</string>
    <string name="edit_count_number">3037</string>
    <string name="course">Photography_Studies_College/Image_Cultures_1_(1)</string>
    <string name="pariticipate_campaign">Participate in a Campaign</string>
    <string name="create_independent_campaign">Create an Independent Program</string>
    <string name="download_app">Download the App from https://play.google.com/store/apps/details?id=org.wikiedufoundation.wikiedudashboard </string>
    <string name="android_app_feedback">Android App 1.01 Feedback</string>
    <string name="logout_confirmation">Are you sure? Logging out will remove all data from this device. </string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="wikiedu_privacyurl">https://wikiedu.org/privacy-policy/</string>
    <string name="wikiedu_termsofservice_url">https://wikiedu.org/terms-of-service/</string>
    <string name="creativecommons_license_url">https://creativecommons.org/licenses/by-sa/3.0/</string>
    <string name="unable_to_connect_server">Unable to connect to server.</string>

</resources>
