<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.home.ExploreFragment">

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_no_campaigns"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:text="@string/tv_no_campaigns"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_campaign_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.github.clans.fab.FloatingActionMenu
        android:id="@+id/menu"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/dimens_10dp"
        android:layout_marginRight="@dimen/dimens_10dp"
        android:layout_marginBottom="@dimen/dimens_70dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:menu_colorNormal="@color/colorAccent"
        app:menu_colorPressed="@color/colorHeadingDark"
        app:menu_shadowColor="@color/colorAccent">

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_arrow_forward_white_24dp"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorHeadingDark"
            app:fab_label="@string/participate"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_add_white_24dp"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorHeadingDark"
            app:fab_label="@string/create_program"
            app:fab_size="mini" />

        <com.github.clans.fab.FloatingActionButton
            android:id="@+id/menu_item3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorAccent"
            android:src="@drawable/ic_arrow_forward_white_24dp"
            app:fab_colorNormal="@color/colorAccent"
            app:fab_colorPressed="@color/colorHeadingDark"
            app:fab_label="@string/find_a_program"
            app:fab_size="mini" />

    </com.github.clans.fab.FloatingActionMenu>
</androidx.constraintlayout.widget.ConstraintLayout>