<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/placeholder"
            android:background="#fefefe"
            android:layout_margin="@dimen/margin_24dp"
            app:cardCornerRadius="@dimen/margin_16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <TextView
                android:id="@+id/textViewTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_24dp"
                android:text="@string/student_name"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textViewRole"
                android:layout_margin="@dimen/margin_24dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/edit_count_number"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:background="@color/colorGrayBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewRole" />

            <TextView
                android:id="@+id/textViewEdit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:text="@string/edit_count"
                android:layout_margin="@dimen/margin_24dp"
                android:textSize="@dimen/text_size_18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <TextView
                android:id="@+id/textViewEditCount"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_24dp"
                android:text="@string/edit_count_number"
                android:textAppearance="@style/TextAppearance.AppCompat.Large"
                android:textColor="@color/colorAccent"
                android:textStyle="bold"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/divider" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_marginTop="@dimen/dimen_16dp"
                android:layout_marginBottom="@dimen/dimen_16dp"
                android:background="@color/colorGrayBackground"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewEditCount" />
            <TextView
                android:id="@+id/textViewCourse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/courses"
                android:paddingTop="@dimen/dimen_8dp"
                android:layout_margin="@dimen/margin_24dp"
                android:textSize="@dimen/text_size_18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewEdit" />

            <TextView
                android:id="@+id/textViewCourseList"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:autoLink="web"
                android:layout_marginLeft="@dimen/margin_24dp"
                android:text="@string/course"
                android:textColor="@color/colorAccent"
                android:textSize="@dimen/text_size_16sp"
                android:textStyle="bold"
                android:layout_marginTop="@dimen/dimen_8dp"
                android:paddingBottom="@dimen/margin_24dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textViewCourse" />

        </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
